# mcp-server

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  API.md  Dockerfile  LICENSE  MCP-REGISTRY-README.md  README.md  SPEC.md  TESTING.md  hatch_build.py  pyproject.toml  pytest.ini  server.json  smithery.yaml
.claude/: settings.json
.codex/: config.toml  hooks.json
.cursor/: AGENTS.md
.devcontainer/: devcontainer.json
.gemini/: .env.example  GEMINI-plan.md  GEMINI.md  gemini.sh  settings.json  system-prompt.md
blockscout_mcp_server/: __init__.py  __main__.py  analytics.py  asgi.py  cache.py  client_meta.py  config.py  constants.py  llms.txt  logging_utils.py  models.py  observability.py  pro_api_key_context.py  server.py  telemetry.py  web3_pool.py
dxt/: README.md  manifest-dev.json  manifest.json
gpt/: README.md  action_tool_descriptions.md  direct_call_endpoint_list.md  instructions.md  openapi.yaml
mcpb/: README.md  build.sh  manifest-dev.json  manifest.json
scripts/: bake_skill_metadata.py  enforce-integration-runner.sh  run_integration_tests.py  slice_impl_plan.py
tests/: conftest.py  pro_api_key_helpers.py  test_analytics.py  test_analytics_helpers.py  test_analytics_source.py  test_bundled_skill_artifacts.py  test_cache.py  test_client_meta.py  test_config.py  test_hatch_build.py  test_instructions_data.py  test_integration_helpers.py  test_logging_utils.py  test_models.py  test_observability.py  test_pro_api_key_context.py  test_pro_api_key_context_auth_signals.py  test_pro_api_key_http_transport.py  test_require_pro_api_key.py  (+10 more)
(+306 files in other folders)
